add a privacy policy page and test a link to it on home

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 ENVIRONMENT=development
-GRAPHQL_ENDPOINT=http://localhost:5000/graphql
+# GRAPHQL_ENDPOINT=http://localhost:5000/graphql
+GRAPHQL_ENDPOINT=https://on-course-graphql-fd2d7b425318.herokuapp.com/graphql
