--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-codegen/cli": "^4.0.1",
     "@graphql-codegen/client-preset": "^4.0.1",
     "@graphql-eslint/eslint-plugin": "^3.19.2",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
